--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+                       <h4 class="parametro-senha__titulo">Força da senha</h4>
+                         <div class="barra"></div>
+                            <div class="forca fraca"></div>
+                               <div class="parametro-senha-textos">
+                                 <p>Fraca</p>
+                                 <p>Média</p>
+                                 <p>Forte</p>
+                               </div>
+                              </div>
                     <div class="parametro-senha-botoes">
                         <button class="parametro-senha__botao">-</button>
                         <p class="parametro-senha__texto">12</p>
@@ -52,6 +61,7 @@
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                       <h4 class="parametro-senha__titulo">Força da senha</h4>
                 </div>
             </div>
         </div>
