--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
                        <h4 class="parametro-senha__titulo">Força da senha</h4>
                          <div class="barra"></div>
-                            <div class="forca fraca"></div>
+                            <div class="forca forte"></div>
                                <div class="parametro-senha-textos">
                                  <p>Fraca</p>
                                  <p>Média</p>
