--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
                 </div>
                 <div class="parametro-senha">
+                    <p class="entropia"></p>
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
                 </div>
             </div>
